--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,23 +11,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:text="DBS"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:text="@string/DBS"
+        android:textColor="#808080" />
 
     <TextView
         android:id="@+id/TextViewOCBC"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:text="OCBC"
-        android:gravity="center"/>
+        android:text="@string/OCBC"
+        android:gravity="center"
+        android:textColor="#808080"/>
 
     <TextView
         android:id="@+id/TextViewUOB"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:text="UOB"
-        android:gravity="center"/>
+        android:text="@string/UOB"
+        android:gravity="center"
+        android:textColor="#808080"/>
 
 </LinearLayout>
